<resources>
    <string name="app_name">Tu viaje</string>
    <string name="add">Mas</string>
    <string name="add_activity">Tuviaje</string>
    <string name="descripcion">Descripción</string>
    <string name="Ppurace">Parque Nacional Puracé</string>
    <string name="name">Juan Angel Gutierrez</string>
    <string name="cell">3217927944</string>
    <string name="ubica">Parque Nacional Puracé</string>
    <string name="reservar">Reservar</string>
    <string name="descripcionPpurace">Un viaje unico</string>
    <string name="portada">Portada de Parque purace</string>
    <string name="Iconcell">Icono de Cell</string>
    <string name="contenidoparque">El Parque Nacional Natural Puracé se encuentra en la reserva de biosfera del cinturón andino, región del macizo colombiano perteneciente a la Cordillera Central de los Andes en Colombia.Su superficie hace parte de los departamentos del Cauca y del Huila.</string>
    <string name="contenidoazufral">El Azufral es un volcán semiactivo en la región andina del departamento colombiano de Nariño, a 6.5 km de la ciudad de Sapuyes, por la vía al Corregimiento de El Espino. Tiene una elevación de 4070 msnm.</string>
    <string name="contenidocotopaxi">El Cotopaxi es un estratovolcán activo que se encuentra en el cantón Latacunga, Provincia de Cotopaxi, República de Ecuador. Con una elevación de 5897 msnm es el segundo volcán más alto del país —siendo precedido por el Chimborazo— y uno de los volcanes activos más altos del mundo</string>
    <string name="contenidonevado">también conocido como Mesa de Herveo,4 y en la época precolombina como Cumanday, Tabuchía y Tama,1 es el más septentrional de los volcanes del cinturón volcánico de los Andes, ubicado en el límite entre los departamentos de Caldas y Tolima, en Colombia</string>
    <string name="contenido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu fringilla dui, eu luctus magna. Vivamus id orci bibendum, vulputate nulla vel, molestie nisl. Morbi facilisis mattis orci ac dictum. Fusce congue et mi non dictum. Sed vulputate rutrum nunc, ac convallis felis bibendum in. Nullam felis elit, viverra ac mi a, vulputate mollis tortor. Proin nec egestas velit, sit amet placerat orci. Sed vel libero leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet augue et accumsan varius. Mauris id lorem vehicula urna hendrerit finibus.</string>
    <string name="Iconoperfil">Icono de perfil</string>
    <string name="detail_phone">Telefono</string>
    <string name="detail_address">Ubicación</string>
    <string name="detail_costo">Costo</string>
    <string name="iconoubicacion">Icono de ubicacion</string>
    <string name="login_title">Tu Viaje</string>
    <string name="registro">Registrate</string>
    <string name="menu">Menu Principal</string>
    <string name="menu_conoces">Conocenos</string>
    <string name="menu_realizados">Viajes Realizados</string>
    <string name="detail_description">Itinerario</string>
    <string name="entrar">Entrar</string>
    <string name="usario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="text_elige">Elige tu viaje de Interes</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="regis_nacimiento">Fecha de Nacimiento</string>
    <string name="register_email">Email</string>
    <string name="register_contra">Contraseña</string>
    <string name="register_name">Nombre</string>
    <string name="title_activity_selected">SelectedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_open">Menu Abierto</string>
    <string name="menu_close">Menu Cerrado</string>
    <string name="title_activity_maps">Map</string>
    <string name="ubicacion">Ubicación</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="nombre">Nombre</string>
    <string name="fecha">Fecha</string>
    <string name="save">Guardar</string>
    <string name="costo">Costo</string>
    <string name="agregar">Agregar Nueva Reserva</string>
    <string name="cellphone">3217927944</string>
    <string name="direccion_false">Calle falsa 123</string>
    <string name="costttt">30.000</string>
    <string name="Nombre_viajes">Nombre Viajes</string>
    <string name="nombrepark">Parque Nacional Natural Puracé</string>
    <string name="fechas">20 de Mayo del 2017</string>
    <string name="guias">Juancho</string>
    <string name="Nuestros_destinos">Nuestros Destinos</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="juan_angel_gutierrez">Juan Angel Gutierrez</string>
    <string name="juanagutierrez_unicauca_edu_co">juanagutierrez@unicauca.edu.co</string>
    <string name="salir">salir</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="nombrepurace">Parque Nacional Puracé</string>
    <string name="nombrenevado">Nevado del Ruiz</string>
    <string name="nombrecotopaxi">Cotopaxi</string>
    <string name="nombrevolcan">Volcán Puracé</string>
    <string name="nombreazufral">Volcan Azufral</string>
    <string name="nombrebalboa">Parapente en Balboa</string>
    <string name="nombrefin">Fin del Mundo</string>
    <string name="nombresalento">Salento</string>
    <string name="cellparque">3217927944</string>
    <string name="cellnevado">3008947599</string>
    <string name="cellcotopaxi">3104737315</string>
    <string name="costopurace">40.000</string>
    <string name="costonevado">180.000</string>
    <string name="costocotopaxi">250.000</string>
    <string name="costovolcan">50.000</string>
    <string name="costoazufral">300.000</string>
    <string name="costobalboa">180.000</string>
    <string name="costofin">300.000</string>
    <string name="costosalent">400.000</string>
    <string name="direcionpurace">Parque Puracé</string>
    <string name="direcionnevado">Parque de los Nevados</string>
    <string name="direcionquito">Quito</string>
    <string name="direciontierra">Inza</string>
    <string name="direcionbalboa">Balboa</string>
    <string name="direccionmocoa">Mocoa</string>
    <string name="direcionsalento">Salento</string>
    <string name="imgnevado">http://viajesmaxitours.com/wp-content/uploads/2014/11/nevado-5-900x400.jpg</string>
    <string name="guiapurace">Juan Angel Gutierrez</string>
    <string name="guianevado">Angela Sofia Velasco</string>
    <string name="imgcotopaxi">https://upload.wikimedia.org/wikipedia/commons/2/20/Cotopaxi_volcano_2008-06-27T1322.jpg</string>
    <string name="guiacotopaxi">Miguel Carvajal</string>
    <string name="guiavolcan">https://img.absolutviajes.com/wp-content/uploads/2012/05/Purace.jpg</string>
    <string name="guiavolca">Rodrigo Ortiz</string>
    <string name="imgbalboa">http://www.barilochexcursiones.com/images/sistema/actividades/galeria/parapente%20copia.jpg</string>
    <string name="imgsalento">http://www.armeniahotel.com.co/wp-content/uploads/2013/01/14140055773_8f50a48dc3_b.jpg</string>
    <string name="imgazufral">https://i.ytimg.com/vi/3RPqDPLSU_s/maxresdefault.jpg</string>

    <string name="fechapurace">20 de Mayo del 2017</string>
    <string name="nombretierradentro">Tierradentro</string>
    <string name="imgfincho">http://3.bp.blogspot.com/-hpRuWbnmUIE/UoZCUIpaECI/AAAAAAAABZs/ak1_6JUBeVI/s640/mocoa+157.JPG</string>
    <string name="tierradentro">http://cdn.colombia.com/images/colombia-info/historia-de-colombia/cc-tierradentro.jpg</string>
    <string name="fechavolcan">10 de Mayo del 2017</string>
    <string name="fechatierra">31 de Octubre del 2017</string>
    <string name="fechabalboa">10 de Diciembre del 2017</string>
    <string name="fechafin">10 de Junio del 2017</string>
    <string name="fechasalento">03 de Marzo del 2017</string>
    <string name="contenidoconocenos">Somos una empresa dedicada a crear conciencia con la naturaleza, por medio de experiencias de viaje.</string>
    <string name="quienes_somos">¿Quienes Somos?</string>
    <string name="visi_n">Visión</string>
    <string name="contenidoconocenos2">Resaltar los diferentes lugares turísticos que tiene el Cauca es uno de nuestros principales objetivos, donde se pretende motivar a las personas a conocer estos lugares y así incentivar su protección ambiental.</string>
    <string name="nuestra_oficina">Nuestra Oficina</string>
</resources>

