<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="destino"
            type="com.angel.juan.app_tuviaje.models.Destino"/>
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout android:padding="@dimen/medium">

            <ImageView
                android:id="@+id/icon_call"
                style="@style/IconDetail"
                android:layout_marginBottom="@dimen/medium"
                android:src="@drawable/ic_call" />

            <TextView
                android:id="@+id/label_phone"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/icon_call"
                android:layout_toRightOf="@id/icon_call"
                tools:text="@string/cellphone"
                android:text="@{destino.telefono}"
                />

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_phone"
                android:layout_toRightOf="@id/icon_call"
                android:text="@string/detail_phone" />

            <ImageView
                android:id="@+id/icon_place"
                style="@style/IconDetail"
                android:layout_below="@id/icon_call"
                android:layout_marginBottom="@dimen/medium"
                android:src="@drawable/ic_place" />

            <TextView
                android:id="@+id/label_place"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/icon_place"
                android:layout_toRightOf="@id/icon_place"
                tools:text="@string/direccion_false"
                android:text="@{destino.direccion}"
                />

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_place"
                android:layout_toRightOf="@id/icon_place"
                android:text="@string/detail_address" />

            <ImageView
                android:id="@+id/icon_star"
                style="@style/IconDetail"
                android:layout_below="@id/icon_place"
                android:src="@drawable/ic_money" />

            <TextView
                android:id="@+id/label_star"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/icon_star"
                android:layout_toRightOf="@id/icon_star"
                tools:text="@string/costttt"
                android:text='@{destino.costo}'
                />

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_star"
                android:layout_toRightOf="@id/icon_star"
                android:text="@string/detail_costo" />


        </RelativeLayout>

        <!--Linea divisora-->

        <View
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginBottom="@dimen/small"
            android:paddingLeft="@dimen/medium"
            android:paddingRight="@dimen/medium"
            android:paddingTop="@dimen/medium"
            android:text="@string/detail_description" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:padding="@dimen/medium"
            tools:text="@string/contenido"
            android:text="@{destino.descripcion}"
            />

        <android.support.constraint.ConstraintLayout>


            <Button
                android:id="@+id/button_ubicacion"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_boton"
                android:text="@string/ubicacion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button_reservar"
                app:layout_constraintTop_toTopOf="@+id/button_reservar"
                tools:text="@string/ubicacion"
                />

            <Button
                android:id="@+id/button_reservar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_boton"
                android:text="@string/reservar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/button_ubicacion"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/reservar" />

        </android.support.constraint.ConstraintLayout>

    </TableLayout>
</layout>
